--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,93 @@
+/* ------------ MAIN ------------ */
 #anEntry{
     border-style: solid;
     border-width: 2px;
     padding: 1em;
+}
+
+/* ------------ SLIDER ------------ */
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 12.5px 0;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  box-shadow: 1.2px 1.2px 3.7px #000000, 0px 0px 1.2px #0d0d0d;
+  background: #484d4d;
+  border-radius: 25px;
+  border: 0px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1.6px 1.6px 5.3px rgba(0, 0, 0, 0.64), 0px 0px 1.6px rgba(13, 13, 13, 0.64);
+  border: 0px solid #ff1e00;
+  height: 30px;
+  width: 30px;
+  border-radius: 50px;
+  background: #ff435f;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -12.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #484d4d;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  box-shadow: 1.2px 1.2px 3.7px #000000, 0px 0px 1.2px #0d0d0d;
+  background: #484d4d;
+  border-radius: 25px;
+  border: 0px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1.6px 1.6px 5.3px rgba(0, 0, 0, 0.64), 0px 0px 1.6px rgba(13, 13, 13, 0.64);
+  border: 0px solid #ff1e00;
+  height: 30px;
+  width: 30px;
+  border-radius: 50px;
+  background: #ff435f;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #484d4d;
+  border: 0px solid #010101;
+  border-radius: 50px;
+  box-shadow: 1.2px 1.2px 3.7px #000000, 0px 0px 1.2px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #484d4d;
+  border: 0px solid #010101;
+  border-radius: 50px;
+  box-shadow: 1.2px 1.2px 3.7px #000000, 0px 0px 1.2px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1.6px 1.6px 5.3px rgba(0, 0, 0, 0.64), 0px 0px 1.6px rgba(13, 13, 13, 0.64);
+  border: 0px solid #ff1e00;
+  height: 30px;
+  width: 30px;
+  border-radius: 50px;
+  background: #ff435f;
+  cursor: pointer;
+  height: 5px;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #484d4d;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #484d4d;
 }
